Fixed z-index for dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,7 @@ body {
 .row .large-8 , .row .large-12 {
 	padding-top: 20px;
 }
+
+.top-bar-section .dropdown {
+	z-index: 1000;
+}
